--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@ header{
 body {
     font-family: Arial, Helvetica, sans-serif;
     color: black;
+    margin: 20px;
 }
 
 p{
@@ -32,7 +33,7 @@ p{
     top: 0;
     left: 0;
     width: 97%;
-    height: 100vh;
+    height: 120vh;
     background-size : cover;
     background-position: center;
     transition: background-image 1.5s ease-in-out;
@@ -470,4 +471,49 @@ body.formValidation {
 
 .formValidationCode a.link:hover {
     text-decoration: underline;
+}
+
+
+/* Reservations */
+/* body {
+    font-family: Arial, sans-serif;
+    margin: 20px;
+    background-color: #f0f0f0;
+} */
+
+h1 {
+    color: #333;
+}
+
+.reservations2{
+    display: flex;
+    flex-direction: column;
+
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: white;
+}
+
+th, td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+}
+
+th {
+    background-color: green;
+    color: white;
+}
+
+tr:hover {
+    background-color: #f5f5f5;
+}
+
+.imgReservation{
+    max-height: 100px
 }
