--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ p{
     top: 0;
     left: 0;
     width: 97%;
-    height: 120vh;
+    height: 140vh;
     background-size : cover;
     background-position: center;
     transition: background-image 1.5s ease-in-out;
@@ -67,6 +67,17 @@ p{
     align-items: center;
 }
 
+.texte-resume h1 {
+    color: #ffffff;
+    background-color: rgba(82, 76, 76, 0.349);
+    /* opacity: 0.5; */
+}
+
+.texte-resume p {
+    color: rgb(255, 255, 255);
+    color: #ffffff;
+    background-color: rgba(5, 5, 5, 0.349);
+}
 
 .texte-Publicite {
     flex: 1; /* Le texte prend l'espace disponible */
@@ -186,6 +197,7 @@ footer ul li {
     border-radius: 10px;
     overflow: hidden;
     padding: 10px;
+    color: #f4f4f4;
 }
 
 .film img {
@@ -194,8 +206,15 @@ footer ul li {
 }
 
 .film h2 {
-    font-size: 16px;
+    font-size: 17px;
     margin-top: 10px;
+}
+
+.film-highlight {
+    transform: scale(1.15);
+    border: 2px solid limegreen;
+    box-shadow: 0 0 20px limegreen;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .label {
@@ -292,7 +311,6 @@ menu {
 }
 
 
-
 /* Formulairess css  */
 
 .form-container {
@@ -308,9 +326,6 @@ menu {
     align-items: center ;
     gap: 20px;
     margin-top : 1%;
-    /* Aligner à droite  */
-    /* position: absolute;
-    right: 0px; */
 }
 
 .form-box {
@@ -347,6 +362,8 @@ button {
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    width: 100%;
+    height: 40px;
 }
 
 button:hover {
@@ -388,15 +405,26 @@ button:hover {
     cursor: pointer;
 }
 
+.erreur{
+    color: red;
+}
+
+.alerte{
+    color: green;
+}
+
 .form-recherche button:hover {
     background-color: #e0e0e0;
 }
 
 .btn-annuler {
-    margin-left: 5px;
+    background: #ccc;
     color: #999;
+    justify-content: center;
     text-decoration: none;
     font-size: 1.2em;
+    height: 35px;
+    padding : 10px;
 }
 
 .aucun-resultat {
